--- a/index.html
+++ b/index.html
@@ -5,6 +5,5 @@
   </head>
   <body>
     <h1>Welcome to Apex Rocks!</h1>
-    <p>Welcome to Apex Rocks & Minerals, a trusted name in premium Indian granite products. With exclusive mines like GEM RED GRANITE and partnerships with cutting-edge factories and quarries, we deliver top-quality tiles, slabs, and custom stonework globally. Committed to excellence in quality, quantity, and timely delivery, we combine decades of experience with modern craftsmanship to bring your vision to life—beautifully and reliably.</p>
-  </body>
+    <p>Welcome to Apex Rocks & Minerals </body>
 </html>
