--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>Welcome to Apex Rocks!</h1>
-    <p>Welcome to Apex Rocks & Minerals </body>
+    <p>Welcome to Apex Rocks & Minerals </p>
+  </body>
 </html>
