Added background image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>Apex Rocks</title>
+    <style>
+  body {
+    background-image: url('background.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+</style>
   </head>
   <body>
     <h1>Welcome to Apex Rocks!</h1>
