--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
     <title>Apex Rocks</title>
     <style>
   body {
-    background-image: url('background.jpeg');
+    text-align: center;
+    font-family: Arial, sans-serif;
+    padding: 40px;
+    background-image: url('bg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+
+    h1 {
+        font-size: 48px;
+        font-weight: bold;
+        font-style: italic;
+        margin-bottom: 100px; /* Creates space below the title (approx 5 lines) */
+      }
+
+      p {
+        font-size: 18px;
+        width: 60%;
+        margin: 0 auto;
+        line-height: 1.6;
   }
 </style>
   </head>
   <body>
-    <h1>Welcome to Apex Rocks!</h1>
-    <p>Welcome to Apex Rocks & Minerals </p>
+    <h1> APEXROCKS and MINERALS</h1>
+    <p>Welcome to Apex Rocks & Minerals, a trusted name in premium Indian granite products. With exclusive mines and partnerships with cutting-edge factories and quarries, we deliver top-quality tiles, slabs, and custom stonework globally. Committed to excellence in quality, quantity, and timely delivery, we combine decades of experience with modern craftsmanship to bring your vision to life—beautifully and reliably. </p>
   </body>
 </html>
