--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     text-align: center;
     font-family: Arial, sans-serif;
     padding: 40px;
-    background-image: url('bg.jpeg');
+    background-image: url('bg.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -23,6 +23,7 @@
         font-size: 18px;
         width: 60%;
         margin: 0 auto;
+        text-align: justify;
         line-height: 1.6;
   }
 </style>
