--- a/index.html
+++ b/index.html
@@ -3,33 +3,51 @@
   <head>
     <title>Apex Rocks</title>
     <style>
-  body {
-    text-align: center;
-    font-family: Arial, sans-serif;
-    padding: 40px;
-    background-image: url('bg.png');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-
-    h1 {
+      body {
+        text-align: center;
+        font-family: Arial, sans-serif;
+      }
+      h1 {
         font-size: 48px;
         font-weight: bold;
         font-style: italic;
-        margin-bottom: 100px; /* Creates space below the title (approx 5 lines) */
+        margin-bottom: 100px;
       }
-
       p {
-        font-size: 18px;
         width: 60%;
-        margin: 0 auto;
+        margin: 0 auto 40px;
         text-align: justify;
         line-height: 1.6;
-  }
-</style>
+      }
+      .nav-buttons a {
+        text-decoration: none;
+        background-color: #0077cc;
+        color: white;
+        padding: 10px 20px;
+        margin: 10px;
+        border-radius: 8px;
+        display: inline-block;
+        font-weight: bold;
+        transition: 0.3s;
+      }
+      .nav-buttons a:hover {
+        background-color: #005fa3;
+      }
+    </style>
   </head>
   <body>
-    <h1> APEXROCKS and MINERALS</h1>
-    <p>Welcome to Apex Rocks & Minerals, a trusted name in premium Indian granite products. With exclusive mines and partnerships with cutting-edge factories and quarries, we deliver top-quality tiles, slabs, and custom stonework globally. Committed to excellence in quality, quantity, and timely delivery, we combine decades of experience with modern craftsmanship to bring your vision to life—beautifully and reliably. </p>
+    <h1>Welcome to Apex Rocks!</h1>
+
+    <p>
+      Welcome to Apex Rocks & Minerals, a trusted name in premium Indian granite products...
+    </p>
+
+    <!-- Navigation Buttons -->
+    <div class="nav-buttons">
+      <a href="about.html">About</a>
+      <a href="gallery.html">Gallery</a>
+      <a href="contact.html">Contact</a>
+    </div>
   </body>
 </html>
+
