--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: url('background.jpg') no-repeat center center fixed;
+      background: url('bg.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
