--- a/index.html
+++ b/index.html
@@ -2,78 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Apex Rocks - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Apex Rocks</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background: url('bg.png') no-repeat center center fixed;
+      font-family: Arial, sans-serif;
+      background-image: url('https://raw.githubusercontent.com/noshini27/Apexrocks-and-Minerals/main/bg1.png');
       background-size: cover;
-      color: #333;
-    }
-
-    .container {
+      background-position: center;
+      color: #000;
       text-align: center;
-      padding: 100px 20px 0;
     }
-
     h1 {
+      margin-top: 60px;
       font-size: 48px;
       font-weight: bold;
       font-style: italic;
-      margin-bottom: 100px; /* 5 lines approx */
-      color: white;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
     }
-
     p {
+      max-width: 800px;
+      margin: 80px auto 20px;
+      line-height: 1.8;
       font-size: 18px;
-      width: 60%;
-      margin: auto;
       text-align: justify;
-      margin-bottom: 100px; /* 5 lines approx */
-      background-color: rgba(255, 255, 255, 0.8);
-      padding: 20px;
-      border-radius: 10px;
     }
-
-    .buttons {
-      margin-top: 100px;
+    .button-container {
+      margin-top: 80px;
     }
-
     .button {
-      background-color: white;
+      background-color: #fff;
       color: #80471c;
       border: 2px solid #80471c;
-      padding: 12px 24px;
-      font-size: 16px;
-      cursor: pointer;
-      border-radius: 8px;
+      padding: 12px 20px;
       margin: 10px;
-      transition: background-color 0.3s, color 0.3s;
-      text-decoration: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: all 0.3s ease;
     }
-
     .button:hover {
       background-color: #80471c;
-      color: white;
+      color: #fff;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to Apex Rocks & Minerals</h1>
-
-    <p>
-      Welcome to Apex Rocks & Minerals, a trusted name in premium Indian granite products. With exclusive mines like GEM RED GRANITE and partnerships with cutting-edge factories and quarries, we deliver top-quality tiles, slabs, and custom stonework globally. Committed to excellence in quality, quantity, and timely delivery, we combine decades of experience with modern craftsmanship to bring your vision to life—beautifully and reliably.
-    </p>
-
-    <div class="buttons">
-      <a href="#about" class="button">About Us</a>
-      <a href="#services" class="button">Our Services</a>
-      <a href="#gallery" class="button">Gallery</a>
-      <a href="#contact" class="button">Contact</a>
-    </div>
+  <h1>Welcome to Apex Rocks & Minerals!</h1>
+  <p>
+    Apex Rocks & Minerals, a trusted name in premium Indian granite products. With exclusive mines
+    and partnerships with cutting-edge factories and quarries, we deliver top-quality tiles, slabs,
+    and custom stonework globally. Committed to excellence in quality, quantity, and timely delivery,
+    we combine decades of experience with modern craftsmanship to bring your vision to life—beautifully
+    and reliably.
+  </p>
+  <div class="button-container">
+    <button class="button">About Us</button>
+    <button class="button">Our Services</button>
+    <button class="button">Gallery</button>
+    <button class="button">Contact</button>
   </div>
 </body>
 </html>
