--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apex Rocks</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -15,10 +17,13 @@
       text-align: center;
     }
     h1 {
-      margin-top: 60px;
-      font-size: 48px;
+      margin-top: 140px; /* approx. 5 lines spacing */
+      font-size: 80px;
       font-weight: bold;
       font-style: italic;
+      color: #5e3215;
+      text-shadow: -2px -2px 4px rgba(0,0,0,0.2);
+      font-family: 'Quicksand', sans-serif;
     }
     p {
       max-width: 800px;
