--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://raw.githubusercontent.com/noshini27/Apexrocks-and-Minerals/main/bg.png');
+      background-image: url('https://raw.githubusercontent.com/noshini27/Apexrocks-and-Minerals/main/background.jpeg');
       background-size: cover;
       background-position: center;
       color: #000;
