--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       font-size: 80px;
       font-weight: bold;
       font-style: italic;
-      color: #D0F0C0;
+      color: #1B4D3E;
       text-shadow: -2px -2px 4px rgba(0,0,0,0.2);
       font-family: 'Quicksand', sans-serif;
     }
@@ -30,7 +30,7 @@
       margin: 80px auto 20px;
       line-height: 1.8;
       font-size: 18px;
-      color: #1B4D3E;
+      color: #D0F0C0;
       font-weight: bold;
       text-align: justify;
     }
@@ -38,8 +38,8 @@
       margin-top: 80px;
     }
     .button {
-      background-color: #D0F0C0;
-      color: #1B4D3E;
+      background-color: #1B4D3E;
+      color: #D0F0C0;
       border: none;
       padding: 12px 20px;
       margin: 10px;
