--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       margin: 80px auto 20px;
       line-height: 1.8;
       font-size: 18px;
-      color: #D0F0C0;
+      color: #E6E6FA;
       font-weight: bold;
       text-align: justify;
     }
@@ -39,7 +39,7 @@
     }
     .button {
       background-color: #1B4D3E;
-      color: #D0F0C0;
+      color: #E6E6FA;
       border: none;
       padding: 12px 20px;
       margin: 10px;
