--- a/index.html
+++ b/index.html
@@ -25,15 +25,20 @@
       text-shadow: -2px -2px 4px rgba(0,0,0,0.2);
       font-family: 'Quicksand', sans-serif;
     }
-    p {
-      max-width: 800px;
-      margin: 80px auto 20px;
-      line-height: 1.8;
-      font-size: 18px;
-      color: #E6E6FA;
-      font-weight: bold;
-      text-align: justify;
-    }
+   p {
+   max-width: 800px;
+   margin: 80px auto 20px;
+   line-height: 1.8;
+   font-size: 18px;
+   color: #E6E6FA;
+   font-weight: bold;
+   text-align: justify;
+   text-shadow:
+     -1px -1px 0 #1B4D3E,
+      1px -1px 0 #1B4D3E,
+     -1px  1px 0 #1B4D3E,
+      1px  1px 0 #1B4D3E;
+   }
     .button-container {
       margin-top: 80px;
     }
