--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
       text-align: center;
     }
     h1 {
-      margin-top: 140px; /* approx. 5 lines spacing */
-      font-size: 80px;
-      font-weight: bold;
-      font-style: italic;
-      color: #1B4D3E;
-      text-shadow: -2px -2px 4px rgba(0,0,0,0.2);
-      font-family: 'Quicksand', sans-serif;
-    }
+  margin-top: 140px; /* approx. 5 lines spacing */
+  font-size: 80px;
+  font-weight: bold;
+  font-style: italic;
+  color: #1B4D3E;
+  font-family: 'Quicksand', sans-serif;
+  text-align: center;
+  text-shadow:
+    -2px -2px 0 #E6E6FA,
+     2px -2px 0 #E6E6FA,
+    -2px  2px 0 #E
+
    p {
    max-width: 800px;
    margin: 80px auto 20px;
