--- a/service.html
+++ b/service.html
@@ -13,7 +13,6 @@
       background-color: #f9f3dc;
     }
 
-    /* Top section with image */
     .services-header {
       width: 100%;
       height: 50vh;
@@ -31,11 +30,8 @@
          1px -1px 0 #E6E6FA,
         -1px  1px 0 #E6E6FA,
          1px  1px 0 #E6E6FA;
-      padding: 20px 40px;
-      border-radius: 12px;
     }
 
-    /* Services section */
     .content-section {
       display: flex;
       justify-content: space-around;
@@ -66,19 +62,18 @@
       font-size: 22px;
     }
 
-    .column img {
-      display: block;
-      margin: 15px auto;
-      width: 100%;
-      border-radius: 10px;
-      max-height: 180px;
-      object-fit: cover;
-    }
-
     .column p {
       color: #1B4D3E;
       font-size: 16px;
       line-height: 1.7;
+    }
+
+    .column img {
+      display: block;
+      margin: 15px auto 10px;
+      width: 100%;
+      max-width: 220px;
+      border-radius: 8px;
     }
 
     @media (max-width: 900px) {
@@ -100,28 +95,22 @@
     <h1>Our Services</h1>
   </div>
 
-  <!-- Services Section -->
+  <!-- Content Blocks -->
   <div class="content-section">
     <div class="column">
-      <h2>DESIGN & CONSULTATION</h2>
-      <img src="img1.jpg" alt="Design & Consultation">
-      <p>
-        Our team provides expert design advice tailored to your architectural vision. Whether you are building a residential space or a commercial project, our experts assist in material selection, texture pairing, and color matching to elevate your project's aesthetic and functionality.
-      </p>
+      <img src="img1.jpg" alt="Granite Finishing">
+      <h2>HIGH-QUALITY GRANITE FINISHING</h2>
+      <p>We provide precision-cut, polished granite slabs and tiles ideal for flooring, wall cladding, kitchen countertops, and more.</p>
     </div>
     <div class="column">
-      <h2>PRECISION FABRICATION</h2>
-      <img src="img2.jpg" alt="Precision Fabrication">
-      <p>
-        With cutting-edge tools and skilled craftsmanship, we deliver precise granite and marble cuts to meet your exact specifications. Every slab or tile goes through stringent quality checks ensuring uniformity, consistency, and structural perfection across batches.
-      </p>
+      <img src="img2.jpg" alt="Custom Fabrication">
+      <h2>CUSTOM FABRICATION SERVICES</h2>
+      <p>From edges to inlays, our custom granite work transforms rough stone into architectural masterpieces tailored to your designs.</p>
     </div>
     <div class="column">
-      <h2>GLOBAL DELIVERY & SUPPORT</h2>
-      <img src="img3.jpg" alt="Global Delivery">
-      <p>
-        We ensure safe packaging, reliable shipping, and on-time delivery worldwide. Our logistics team coordinates end-to-end support, from customs documentation to secure transit, guaranteeing a seamless experience for our global clientele.
-      </p>
+      <img src="img3.jpg" alt="Global Logistics">
+      <h2>GLOBAL LOGISTICS & DELIVERY</h2>
+      <p>Our global delivery network ensures your orders arrive safely and on time, backed by reliable packaging and shipping standards.</p>
     </div>
   </div>
 
