--- a/service.html
+++ b/service.html
@@ -95,7 +95,7 @@
     <h1>Our Services</h1>
   </div>
 
-  <!-- Content Blocks -->
+  <!-- Services Content -->
   <div class="content-section">
     <div class="column">
       <img src="img1.jpg" alt="Granite Finishing">
@@ -103,7 +103,7 @@
       <p>We provide precision-cut, polished granite slabs and tiles ideal for flooring, wall cladding, kitchen countertops, and more.</p>
     </div>
     <div class="column">
-      <img src="img2.jpg" alt="Custom Fabrication">
+      <img src="img2.png" alt="Custom Fabrication">
       <h2>CUSTOM FABRICATION SERVICES</h2>
       <p>From edges to inlays, our custom granite work transforms rough stone into architectural masterpieces tailored to your designs.</p>
     </div>
@@ -111,6 +111,16 @@
       <img src="img3.jpg" alt="Global Logistics">
       <h2>GLOBAL LOGISTICS & DELIVERY</h2>
       <p>Our global delivery network ensures your orders arrive safely and on time, backed by reliable packaging and shipping standards.</p>
+    </div>
+    <div class="column">
+      <img src="img4.jpg" alt="Installation Services">
+      <h2>INSTALLATION SERVICES</h2>
+      <p>We offer expert on-site installation ensuring that each granite surface is professionally placed and seamlessly integrated.</p>
+    </div>
+    <div class="column">
+      <img src="img5.jpg" alt="Landscaping & Stonework">
+      <h2>LANDSCAPING & ARCHITECTURAL STONEWORK</h2>
+      <p>From pathways to outdoor features, our natural stone options bring elegance and durability to your landscaping projects.</p>
     </div>
   </div>
 
