--- a/service.html
+++ b/service.html
@@ -12,6 +12,27 @@
       font-family: 'Quicksand', sans-serif;
       background-color: #f9f3dc;
     }
+    .button {
+      background-color: #E6E6FA;
+      color: #1B4D3E;
+      border: none;
+      padding: 12px 20px;
+      margin: 10px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+    }
+    .button:hover {
+      background-color: #5e3215;
+    }
+    .back-button-container {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+    }
 
     .services-header {
       width: 100%;
@@ -123,6 +144,8 @@
       <p>From pathways to outdoor features, our natural stone options bring elegance and durability to your landscaping projects.</p>
     </div>
   </div>
-
+  <div class="back-button-container">
+  <a href="index.html" class="button">Back</a>
+</div>
 </body>
 </html>
