--- a/service.html
+++ b/service.html
@@ -65,11 +65,12 @@
       width: 30%;
       min-width: 250px;
       text-align: justify;
-      background-color: #f9f3dc;
+      background-color: #1B4D3E;
       padding: 20px;
       margin: 10px;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
+
     }
 
     .column h2 {
