--- a/service.html
+++ b/service.html
@@ -70,7 +70,7 @@
       margin: 10px;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
-
+      color: #E6E6FA;
     }
 
     .column h2 {
