--- a/service.html
+++ b/service.html
@@ -65,7 +65,7 @@
       width: 30%;
       min-width: 250px;
       text-align: justify;
-      background-color: #1B4D3E;
+      background-color: #E6E6FA;
       padding: 20px;
       margin: 10px;
       border-radius: 10px;
