--- a/about.html
+++ b/about.html
@@ -66,12 +66,12 @@
       width: 30%;
       min-width: 250px;
       text-align: justify;
-      background-color: #f9f3dc;
+      background-color: #E6E6FA;
       padding: 20px;
       margin: 10px;
       border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      color:#E6E6FA
+      color: #1B4D3E;
     }
 
     .column h2 {
