--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
 
     .gallery-container img {
       width: 100%;
-      height: auto;
+      height: 200px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.15);
     }
