--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
 
     .gallery-container img {
       width: 100%;
-      height: 200px;
+      height: 300px;
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.15);
     }
@@ -90,9 +90,9 @@
 
   <!-- Gallery Grid -->
   <div class="gallery-container">
-    <img src="gal1.jpg" alt="Gallery Image 1">
-    <img src="gal2.jpg" alt="Gallery Image 2">
-    <img src="gal3.webp" alt="Gallery Image 3"height=200px>
+    <img src="gal1.jpg" alt="Gallery Image 1"height=300px>
+    <img src="gal2.jpg" alt="Gallery Image 2"height=300px>
+    <img src="gal3.webp" alt="Gallery Image 3"height=300px>
     <img src="gal4.jpg" alt="Gallery Image 4">
     <img src="gal5.jpg" alt="Gallery Image 5">
     <img src="gal6.jpg" alt="Gallery Image 6">
