--- a/gallery.html
+++ b/gallery.html
@@ -90,9 +90,9 @@
 
   <!-- Gallery Grid -->
   <div class="gallery-container">
-    <img src="gal1.jpg" alt="Gallery Image 1"height=300px>
-    <img src="gal2.jpg" alt="Gallery Image 2"height=300px>
-    <img src="gal3.webp" alt="Gallery Image 3"height=300px>
+    <img src="gal1.jpg" alt="Gallery Image 1">
+    <img src="gal2.jpg" alt="Gallery Image 2">
+    <img src="gal3.webp" alt="Gallery Image 3">
     <img src="gal4.jpg" alt="Gallery Image 4">
     <img src="gal5.jpg" alt="Gallery Image 5">
     <img src="gal6.jpg" alt="Gallery Image 6">
